force-app/main/default/objects/CrowdFunding__c.object
<CustomObject>
    <label>Crowd Funding</label>
    <nameField>
        <displayFormat>#{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crowd Funding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>