force-app/main/default/objects/CrowdFunding__c/fields/Gathered__c.field-meta.xml
<CustomField>
    <fullName>Gathered__c</fullName>
    <label>Gathered</label>
    <summarizedField>Donate__c.Amount__c</summarizedField>
    <summaryForeignKey>Donate__c.CrowdFunding__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>