force-app/main/default/objects/CrowdFunding__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>